--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ html,body{
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 30px 0;
+    padding: 2vw 0;
 }
 #nav img{
     height: 4vw;
@@ -60,7 +60,7 @@ html,body{
 #navleft{
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 2vw;
 }
 #navleft a{
     pointer-events: all;
@@ -88,9 +88,9 @@ html,body{
 }
 #hero{
     position: absolute;
-    top: 55%;
+    /* top: 35%; */
     left: 0;
-    transform: translateY(-50%);
+    /* transform: translateY(-50%); */
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -120,7 +120,7 @@ html,body{
     font-size: 11vw;
 }
 #heroleft button{
-    pointer-events: all;
+    pointer-events: none;
     border: none;
     cursor: pointer;
     padding: 0.8vw 3vw;
@@ -146,6 +146,7 @@ html,body{
     height: 150px;
     margin-top: 20px;
     margin-bottom: 30px;
+    border-radius: 3px;
     background-image: url(https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cG9ydHJhaXR8ZW58MHx8MHx8fDA%3D);
     background-size: cover;
     background-position: center;
